--- a/src/components/intro.css
+++ b/src/components/intro.css
@@ -4,7 +4,8 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  margin-top: 3rem;
+  margin-top: 5rem;
+  margin-bottom: 5rem;
   text-align: center;
 }
 
@@ -16,7 +17,7 @@
 .intro-underline {
   border-bottom: 1.5px solid #C25D38;
   width: 75%;
-  padding: 5px;
+  padding: 10px;
 }
 
 .intro-body {
