--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans&family=Kameron&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Abhaya+Libre&family=DM+Sans&family=Kameron&display=swap');
 :root {
-  font-family: Kameron, DM Sans, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Abhaya Libre ,Kameron, DM Sans, system-ui, Avenir, Helvetica, Arial, sans-serif, serif;
   margin: 0;
   padding: 0;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
+  -webkit-tap-highlight-color: transparent;
 }
 
 body {
