--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -3,34 +3,38 @@
   position: absolute;
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: space-between;
   top: 0;
   width: 100%;
   max-width: 100%;
   z-index: 1;
   background-image: linear-gradient(to bottom, rgba(107, 110, 112, 0.5), 50%, transparent 100%);
-  /* background-color: rgba(82, 82, 82, 0.12); */
+  background-color: rgba(82, 82, 82, 0.05);
   transition: all .1s ease-in-out;
-  
+  height: 90px;
+  padding-bottom: 1rem;
+  padding-top: 2rem;
 }
 
 .logo {
   object-fit: contain;
-  height: 200px;
-  width: 200px;
+  margin-left: 1.5rem;
+  height: 155px;
+  width: 155px;
 }
 
 .nav-menu {
   transition: all .4s ease-in-out;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: flex-end;
   align-items: center;
+  gap: 0 1.5rem;
   width: 100%;
   list-style: none;
 }
 
 .home-button {
-  font-size: 1.45rem;
+  font-size: 1.4rem;
   height: min-content;
   color: rgb(247, 247, 247);
   text-decoration: none;
@@ -52,11 +56,11 @@
 }
 
 .icon {
-  color: rgb(8, 8, 8);
+  color: rgb(250, 250, 250);
 }
 
 .icon:hover {
-  color: rgb(13, 13, 13);
+  color: #C25D38;
 }
 
 .logo-media {
@@ -65,14 +69,18 @@
   width: 200px;
 }
 
+.last-li {
+  margin-right: 10px;
+}
+
 @media screen and (max-width:980px) {
   .navbar {
     position: fixed;
-    background-image: linear-gradient(to top, rgba(107, 110, 112, 0.4), 65%, transparent 100%);
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), 65%, transparent 100%);
   }
   .hamburger-container {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     background-color: transparent;
     width: 100%;
     margin-right: 2rem;
@@ -115,18 +123,22 @@
     font-size: 1.2rem;
   }
 
-  .logo-media {
+  /* .logo-media {
     height: 120px;
     width: 120px;
     margin-left: 2rem;
     margin-top: 5px;
     margin-bottom: -10px;
-  }
+  } */
 
   .navbar-black-logo {
     object-fit: contain;
     height: 200px;
     width: 200px;
+  }
+
+  .last-li {
+    margin-right: 0;
   }
 }
 
