--- a/src/components/banner.css
+++ b/src/components/banner.css
@@ -1,11 +1,12 @@
 .featured-about {
     object-fit: contain;
-    height: 500px;
+    height: 600px;
     background-size: cover;
-    background-position: center center;
-}
-
-.featured-movies {
+    /* background-position: 55% 95%; */
+    background-position: center bottom 35%;
+  }
+  
+  .featured-movies {
     color: rgb(247, 247, 247);
     margin-left: 30px;
     padding-top: 30px;
@@ -65,6 +66,7 @@
 }
 
 .fade-bottom {
-    height: 17.5rem;
-    background-image: linear-gradient(to top, rgb(255, 255, 255), 35%, transparent 100%);
+    height: 3rem;
+    margin-top: 20.8rem;
+    background-image: linear-gradient(to top, rgb(255, 255, 255), 70%, transparent 100%);
 }
