--- a/src/components/banner.css
+++ b/src/components/banner.css
@@ -3,7 +3,7 @@
     height: 600px;
     background-size: cover;
     /* background-position: 55% 95%; */
-    background-position: center bottom 35%;
+    background-position: center center;
   }
   
   .featured-movies {
