Adds ui changes

--- a/src/about.css
+++ b/src/about.css
@@ -44,15 +44,16 @@
   color: rgb(87, 85, 85);
   font-size: .9rem;
   padding: 9px 30px;
-  background-color: #ecccb7df;
+  background-color: #72bcabdb;
   font-weight: 400;
   border: none;
+  border-radius: 20px;
   cursor: pointer;
   margin-top: 20px;
 }
 
 .about-btn:hover {
-  background-color: #ecccb7ba;
+  background-color: #72bcab96;
 }
 
 
