--- a/src/components/contact.css
+++ b/src/components/contact.css
@@ -22,6 +22,7 @@
   background-color: #72bcabdb;
   font-weight: 400;
   border: none;
+  border-radius: 20px;
   cursor: pointer;
   margin-top: 20px;
 }
