--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,8 @@
 }
 
 body {
+  background: linear-gradient(white 30%, rgba(230, 212, 180, 0.8));
+  /* rgba(230, 212, 180, 0.9) */
   margin: 0;
   padding: 0;
   min-width: 320px;
