--- a/src/components/logo.css
+++ b/src/components/logo.css
@@ -3,9 +3,8 @@
     align-items: center;
     justify-content: space-evenly;
     padding-top: 5px;
+    flex-wrap: wrap;
 }
-
-
 
 @media screen and (max-width:750px) {
     .logo-container {
