--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -1,72 +1,73 @@
-
 .footer {
-    width: 100%;
-    padding: 2rem 0;
-    color: white;
-    background-color: #328396;
-    bottom: 0;
-  }
-  a {
-    color: inherit;
-  }
-  
+  width: 100%;
+  /* padding: .5rem 0rem; */
+  color: white;
+  background-color: #328396;
+  bottom: 0;
+}
+
+a {
+  color: inherit;
+}
+
+.footer-container {
+  max-width: 1240px;
+  margin: auto;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 40px;
+}
+
+.footer .left {
+  height: 100%;
+  max-width: 100%;
+  display: flex;
+  flex-direction: column;
+  padding: 0rem .5rem;
+}
+
+.footer .right {
+  height: 100%;
+  max-width: 100%;
+  display: flex;
+  flex-direction: column;
+  padding: 0rem .5rem;
+  margin: auto;
+}
+
+.footer h4 {
+  font-size: 1.1rem;
+  padding: .5rem 0;
+}
+
+.footer p {
+  font-size: 1rem 0;
+}
+
+.footer .location {
+  display: flex;
+  align-items: center;
+}
+
+.footer .location p {
+  padding-bottom: .5rem;
+}
+
+.footer .location h4 {
+  padding-top: .5rem;
+}
+
+.logo-footer {
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  gap: 30px;
+}
+
+@media screen and (max-width:640px) {
   .footer-container {
-    max-width: 1240px;
-    margin: auto;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 40px;
-  }
-  
-  .footer .left {
-    height: 100%;
-    max-width: 100%;
-    display: flex;
-    flex-direction: column;
-    padding: .5rem;
-  }
-  
-  .footer .right {
-    height: 100%;
-    max-width: 100%;
-    display: flex;
-    flex-direction: column;
-    padding: .5rem;
-    margin: auto;
-  }
-  
-  .footer h4 {
-    font-size: 1.1rem;
-    padding: 1rem 0;
-  }
-  
-  .footer p {
-    font-size: 1rem 0;
-  }
-  
-  .footer .location {
-    display: flex;
-    align-items: center;
-  }
-  
-  .footer .location p {
-    padding-bottom: .5rem;
-  }
-  
-  .footer .location h4 {
-    padding-top: 0;
+    grid-template-columns: 1fr;
+    gap: 0;
   }
 
-  .logo-footer {
-    display: flex;
-    justify-content: flex-end;
-    align-items: flex-end;
-    gap: 30px;
-  }
-  
-  @media screen and (max-width:640px) {
-    .footer-container {
-      grid-template-columns: 1fr;
-    }
-  }
-
+}
