--- a/src/components/contact.css
+++ b/src/components/contact.css
@@ -15,6 +15,19 @@
   line-height: 1.4;
 }
 
+.contact-body>h1 {
+  /* margin: auto; */
+  font-size: 2.7rem;
+}
+
+.contact-underline {
+  border-bottom: 1.5px solid #C25D38;
+  width: 75%;
+  /* padding-bottom: 5px; */
+  margin-bottom: 1.5rem;
+  margin: auto;
+}
+
 .contact-btn {
   color: rgb(87, 85, 85);
   font-size: .9rem;
